--- a/MultiplayerAttempt2/Assembly-CSharp.csproj
+++ b/MultiplayerAttempt2/Assembly-CSharp.csproj
@@ -48,8 +48,10 @@
      <Compile Include="Assets\Attack1.cs" />
      <Compile Include="Assets\AttackColliderScript.cs" />
      <Compile Include="Assets\Health.cs" />
+     <Compile Include="Assets\MakeTheChest.cs" />
      <Compile Include="Assets\NetManagerCustom.cs" />
      <Compile Include="Assets\Scripts\JohnWalkingNew.cs" />
+     <Compile Include="Assets\Scripts\Object_SyncPosition.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerControllerOffline.cs" />
      <Compile Include="Assets\Scripts\Player_SyncPosition.cs" />
