pre lobby backup

--- a/MultiplayerAttempt2/Assembly-CSharp.csproj
+++ b/MultiplayerAttempt2/Assembly-CSharp.csproj
@@ -45,10 +45,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\MyManager.cs" />
      <Compile Include="Assets\Scripts\Attack1.cs" />
      <Compile Include="Assets\Scripts\AttackColliderScript.cs" />
      <Compile Include="Assets\Scripts\Health.cs" />
      <Compile Include="Assets\Scripts\JohnWalkingNew.cs" />
+     <Compile Include="Assets\Scripts\MoveableObjectScript.cs" />
      <Compile Include="Assets\Scripts\NetManagerCustom.cs" />
      <Compile Include="Assets\Scripts\Object_SyncPosition.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
